--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <div class = "form-box">
     <form>   
       <label for = "city-input"> Search for a City: <label>
+      <p> Please enter a city's full name instead of abbreviation, <br>
+        for example, enter San Francisco instead of SF. 
+      </p>
       <input type = "text" id = "city-input">
       <button id = "submit-button" type="submit">
         Search
@@ -28,21 +31,21 @@
 
   
   <div class = "current-weather"> 
-    <h2> Current Weather </h2>
+    <h2 class = "section-title"> Current Weather </h2>
 
   </div>
 
   <div class= "search-history">
-    <h2> Search History </h2>
+    <h2 class = "section-title"> Search History </h2>
   </div>
 
   <div class = "forecasts">
-    <h2> 5-Day Forecast </h2>
+    <h2 class = "section-title"> 5-Day Forecast </h2>
     <div class = cards> </div>
     </div>
 
 </div>
-  
+<!-- flex container ends -->
 
 
 
