--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   
   <div class = "current-weather"> 
     <h2 class = "section-title"> Current Weather </h2>
+    <h3 id="current-date"></h3>
 
   </div>
 
