--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href ="./assets/css/style.css"/>
   <title>Weather Dashboard</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <h1>Weather Dashboard </h1> 
   </header>
 
-
+<!-- flex container starts -->
 <div class = "flex-container">
   <div class = "form-box">
     <form>   
@@ -33,9 +34,12 @@
 
   
   <div class = "current-weather"> 
-    <h2 class = "section-title"> Current Weather </h2>
-    <h3 id="current-date"></h3>
-    <ul></ul>
+    <h1 class = "section-title"> Current Weather </h2>
+    <h2 id="current-date"></h3>
+    <h3 id="current-temp"> </h3>
+    <h3 id="current-wind"> </h3>
+    <h3 id="current-humidity"></h3>
+    <h3 id="current-uv"></h3>
 
   </div>
 
