--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
   
   <div class = "current-weather"> 
     <h1 class = "section-title"> Current Weather </h1>
-    <!-- <h2 id="current-date"></h3>
+    <h2 id="current-city"></h2>
+    <h2 id="current-date"></h2>
     <h3 id="current-temp"></h3>
     <h3 id="current-wind"></h3>
     <h3 id="current-humidity"></h3>
-    <h3 id="current-uv"></h3> -->
+    <h3 id="current-uv"></h3>
 
   </div>
 
