LS, displaying past search

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
   <div class= "search-history">
     <h2 class = "section-title"> Search History </h2>
+    <div class="search-history-buttons"></div>
   </div>
 
   <div class = "forecasts">
