added functionality of displaying past search and forecasts

--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
   
   <div class = "current-weather"> 
     <h1 class = "section-title"> Current Weather </h1>
+    <p>Note: Date and time based on your local time</p>
+    
+    <img id="icon">
     <h2 id="current-city"></h2>
     <h2 id="current-date"></h2>
     <h3 id="current-temp"></h3>
     <h3 id="current-wind"></h3>
     <h3 id="current-humidity"></h3>
     <h3 id="current-uv"></h3>
-
+    
   </div>
 
   <div class= "search-history">
@@ -49,10 +52,11 @@
     <div class="search-history-buttons"></div>
   </div>
 
+  <!-- Forecast section starts here  -->
   <div class = "forecasts">
     <h2 class = "section-title"> 5-Day Forecast </h2>
-    <div class = cards> </div>
-    </div>
+      <div class = cards> </div>
+  </div>
 
 </div>
 <!-- flex container ends -->
